[package]
name = "codize"
version = "0.2.0"
edition = "2021"
description = "A simple library for encoding nested code blocks"
repository = "https://github.com/Pistonite/codize"
license = "UNLICENSE"
authors = ["Pistonight <terrabyte100k@gmail.com>"]
keywords = ["code", "block", "format", "nested", "print"]
categories = ["value-formatting"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
