[package]
name = "codize"
version = "0.2.0"
edition = "2021"
description = "A simple library for encoding nested code blocks"
repository = "https://github.com/Pistonite/codize"
license = "Unlicense"
authors = ["Pistonight <terrabyte100k@gmail.com>"]
keywords = ["code", "block", "format", "nested", "print"]
categories = ["value-formatting"]

exclude = [
    ".github/**/*",
    "Taskfile.yml",
]

[dependencies]
