[package]
name = "codize"
version = "0.3.3"
edition = "2021"
description = "Simple, language-agnostic library that pretty-prints code for your code-generation tool."
repository = "https://github.com/Pistonite/codize"
license = "Unlicense"
authors = ["Pistonight <terrabyte100k@gmail.com>"]
keywords = ["code", "block", "format", "nested", "print"]
categories = ["value-formatting"]

exclude = [
    ".github/**/*",
    "Taskfile.yml",
]

[dependencies]
derivative = "2.2.0"

[dev-dependencies]
indoc = "2.0.5"
